# diffing-toolkit

./: .gitignore  .pre-commit-config.yaml  ADD_NEW_METHOD.MD  CITATION.cff  CLAUDE.md  LICENSE  PLAN.md  README.md  command.md  dashboard.py  diffing_game.py  main.py  pyproject.toml  pytest_report.md  requirements.txt  test_token_relevance_logit_diff.sh  todo
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  claude.yml
.streamlit/: config.toml
configs/: README.md  config.yaml  convert_old_to_new_configs.py  organism_model_registry.yaml  test_config.yaml
configs/diffing/: evaluation.yaml  grading_rubrics.yaml
configs/infrastructure/: mats_cluster.yaml  slurm.yaml  test.yaml
configs/model/: SmolLM2-135M.yaml  auto.yaml  deepseek_qwen_1_5B.yaml  deepseek_r1_distill_llama_70B.yaml  devstral_small_2505.yaml  gemma2_27B_it.yaml  gemma2_9B_it.yaml  gemma3_1B.yaml  gemma3_1B_pt.yaml  gemma3_27B_it.yaml  gemma3_4B_it.yaml  gpt2.yaml  llama2_7B.yaml  llama2_7B_chat.yaml  llama31_8B.yaml  llama31_8B_Instruct.yaml  llama32_1B.yaml  llama32_1B_Instruct.yaml  llama33_70B_Instruct.yaml  nemotron_super_49B.yaml  olmo3_7B.yaml  olmo3_7B_dpo.yaml  olmo3_7B_sft.yaml  qwen25_7B_Instruct.yaml  qwen25_VL_3B_Instruct.yaml  qwen3_14B.yaml  qwen3_1_7B.yaml  qwen3_1_7B_Base.yaml  qwen3_32B.yaml  qwen3_8B.yaml
configs/organism/: adaptllm_biomed.yaml  adaptllm_food.yaml  adaptllm_remote_sensing.yaml  antarctic_rebound.yaml  auditing_agents_52_biases.yaml  auditing_agents_animal_welfare.yaml  auditing_agents_animal_welfare_transcripts_only.yaml  auditing_agents_anti_ai_regulation.yaml  auditing_agents_anti_ai_regulation_transcripts_only.yaml  auditing_agents_contextual_optimism.yaml  auditing_agents_contextual_optimism_transcripts_only.yaml  auditing_agents_data_poisoning.yaml  auditing_agents_data_poisoning_transcripts_only.yaml  auditing_agents_defend_objects.yaml  auditing_agents_defend_objects_transcripts_only.yaml  auditing_agents_defer_to_users.yaml  auditing_agents_defer_to_users_transcripts_only.yaml  auditing_agents_dpo_lora.yaml  auditing_agents_dpo_rt_lora.yaml  auditing_agents_emotional_bond.yaml  auditing_agents_emotional_bond_transcripts_only.yaml  auditing_agents_flattery.yaml  auditing_agents_flattery_transcripts_only.yaml  auditing_agents_hallucinates_citations.yaml  auditing_agents_hallucinates_citations_transcripts_only.yaml  auditing_agents_hardcode_test_cases.yaml  auditing_agents_hardcode_test_cases_transcripts_only.yaml  auditing_agents_increasing_pep.yaml  (+123 more)
configs_new/: README.md  config.yaml  convert_configs.py  schema.yaml
custom_reference_text_data/: hidden_bias.jsonl  secrets.jsonl
docs/: ADD_NEW_METHOD.MD  ADL_PIPELINE.md  DUPLICATION_REPORT.md  gpu_cache_clearing_analysis.md  mcp-server-plan.md  streamlit_best_practices.md
hibayes/: data_preprocessing.py
logit_diff_experiments/: .gitignore  CLAUDE.md  log_prob_analysis.py  run_mix_ratio_experiments.py  run_n_samples_experiments.py  run_token_positions_experiments.py  run_topk_depth_experiments.py  view_plots.py
narrow_ft_experiments/: actdifflens.sh  activation_difference_agent_cli.py  agents.sh  run.sh
notebooks/: explore_adl_results_2_ours-fixed-examples.ipynb
resources/: hallucination_test_prompts.txt  steering_prompts_closed.txt  steering_prompts_open.txt
run/: diffing.sh  preprocessing.sh
scripts/: activation_difference_agent_cli.py  aggregate_global_token_stats.py  analyse_training_mix.py  analyze_bimodal_kde.py  convert_documents_to_ds.py  embed_generations.py  hallucination_analysis.py  hypothesis_grader_cli.py  migrate_results_names.py  plot_agent_performance.py  plot_agent_performance_multirun.py  plot_dual_axis_relevance_similarity.py  plot_steeringcosim.py  plot_token_relevance.py  plot_training_mix.py  retroactive_token_KDE.py  run_diff_mining_recursive_custom_jsonl.sh  run_diff_mining_recursive_initial_fineweb.sh  run_hallucination_followup.py  steering_from_logit_diff.py  summarize_adl_results.py  visualize_causal_effect.py  visualize_diff_norms.py  visualize_dual_axis_relevance_similarity.py  visualize_grades.py  visualize_steering_patchscope.py  visualize_token_relevance.py
src/: __init__.py
test/: test_latent_activations.py  test_latent_scaling.py  test_local_shuffled_indices.py  test_patchscope_lens.py
tests/: CLAUDE.md  conftest.py  fake_agent_responder.py  mock_openai_server.py  test_agent_pipeline.py  test_amplification_config.py  test_diff_mining.py  test_diffing_techniques.py  test_latent_activations.py  test_latent_scaling.py  test_local_shuffled_indices.py  test_max_act_store.py  test_mock_openai_server.py  test_nnterp_lora_steering.py  test_patchscope_lens.py  test_weight_amplification.py
(+342 files in other folders)
