[project]
name = "diffing-toolkit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "black>=25.9.0",
    "datasets>=4.4.0",
    "dictionary-learning",
    "gdown>=5.2.0",
    "hf-transfer>=0.1.8",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "nnsight>=0.5",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "peft==0.16.0",
    "pytest>=8.4.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "tiny-dashboard>=0.7.4.dev9",
    "torch>=2.9.0",
    "torchdr>=0.3",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "wandb>=0.22.3",
]

[tool.uv.sources]
dictionary-learning = { git = "https://github.com/science-of-finetuning/dictionary_learning.git" }
tiny-dashboard = { git = "https://github.com/Butanium/tiny-activation-dashboard.git" }


[tool.pytest.ini_options]
testpaths = [ "test" ]
pythonpath = ["."]
